2012-05-25  Kinuko Yasuda  <kinuko@chromium.org>

        [chromium] Deprecate FileUtilities::getFileSize and getFileModifiedTime in favor of getFileMetadata
        https://bugs.webkit.org/show_bug.cgi?id=87492

        Reviewed by Adam Barth.

        * chromium/public/WebFileUtilities.h:

2012-05-25  Mark Pilgrim  <pilgrim@chromium.org>

        [Chomium] Move sandboxSupport to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87518

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::sandboxSupport):
        * chromium/public/android/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):
        * chromium/public/linux/WebFontFamily.h: Added.
        (WebKit):
        (WebFontFamily):
        * chromium/public/linux/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):
        * chromium/public/mac/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):
        * chromium/public/win/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):

2012-05-17  Andrey Kosyakov  <caseq@chromium.org>

        [chromium] add instrumentation for compositing
        https://bugs.webkit.org/show_bug.cgi?id=83928

        Reviewed by James Robinson.

        - added willCommit() and didBeginFrame() methods for instrumentation of compositing.

        * chromium/public/WebLayerTreeViewClient.h:
        (WebLayerTreeViewClient):

2012-05-21  Kinuko Yasuda  <kinuko@chromium.org>

        Cleanup: add a file system call which captures the file metadata at once.
        https://bugs.webkit.org/show_bug.cgi?id=86995

        Reviewed by David Levin.

        * Platform.gypi: Added an entry for WebFileInfo.h.
        * chromium/public/WebFileInfo.h: Renamed from Source/WebKit/chromium/public/WebFileInfo.h.